--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.2.6",
     "next": "12.1.0",
+    "phosphor-react": "^1.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.8"
