--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "phosphor-react": "^1.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-fast-marquee": "^1.3.1",
     "sass": "^1.49.8"
   },
   "devDependencies": {
